<resources>
    <string name="app_name">TODO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings in AddNoteActivity -->
    <string name="submit">Submit</string>
    <string name="note_hint">Write your note there</string>
    <string name="title_hint">Title of TODO</string>
    <string name="default_text">Uncompleted</string>
    <string name="notify">Notify?</string>
    <string name="your_note">Your note</string>
    <string name="arrow">arrow</string>
    <string name="custom_tag_here">Custom tag here</string>
    <string name="tap_to_set_date">Tap to set date</string>
    <string name="tap_to_set_time">Tap to set time</string>
</resources>